--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,53 @@
-// TODO
+.Content{
+  article + article{
+    margin-top:3rem;
+  }
+
+  h2{
+    font-size: 1.75rem;
+    font-weight: 700;
+    color:var(--white-900);
+  }
+  
+  p{
+    margin-top:0.6rem;
+    font-size:1.1rem;
+    font-weight: 400;
+  }
+  
+  main{
+    margin-top: 3.8rem;
+  }
+
+time{
+  margin-left:0.2rem;
+}
+
+strong{
+  font-weight: 400; 
+}
+
+strong,time{
+  color:var(--grey-300);
+}
+
+  footer{
+    display: flex;
+    align-items: center;
+    gap: 1.6rem;
+    margin-top:1.5rem;
+    font-size:0.8rem;
+  }
+
+  button{
+    color:var(--pink-300);
+    background:none;
+    border:none;
+    margin-top:4rem;
+    transition: filter 1s;
+    
+  &:hover{
+    filter:brightness(0.8);
+  }
+  }
+}
