--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,79 @@
 // TODO
+.Container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-top: 5rem;
+}
+
+.Content{
+  max-width: 1440px;
+  width: 1440px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .BannerContainer{
+    display: flex;
+    width: 100%;
+    margin-top: 2.4rem;
+
+    img{
+      margin:auto;
+      max-width:100%;
+      max-height: 400px;
+    }
+
+  }
+
+main{
+    margin-top:5rem;
+  }
+
+h1,h2{
+  color:var(--white-900)
+}
+
+  h1{
+    font-size: 3rem;
+    font-weight: 700;
+  }
+
+  h2{
+    font-weight: 400;
+  }
+
+  span{
+    font-weight: 400;
+    color:var(--grey-300);
+  }
+
+  .Info{
+    margin-top:1.5rem;
+    display:flex;
+    justify-items: center;
+    max-width: 357px;
+    gap: 1.5rem;
+    font-size:0.875rem ;
+    font-weight: 400;
+
+    span{
+      display: flex;
+      justify-items: center;
+      gap:0.5rem;
+    }
+  }
+  
+  section:first-of-type{
+    margin-top:4rem;
+
+    & ~ section{
+      margin-top:4rem;
+    }
+
+  }
+
+  h2{
+    margin-bottom: 1rem;
+  }
+}
