--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,7 +1,55 @@
+:root{
+  --black-800:#1A1D23;
+  --white-900:#F8F8F8;
+  --grey-200:#D7D7D7;
+  --grey-300:#BBBBBB;
+  --pink-300:#FF57B2;
+}
+
+@media (max-width: 1080px) {
+  html {
+    font-size: 93.75%;
+  }
+}
+
+@media (max-width: 720px) {
+  html {
+    font-size: 87, 5%;
+  }
+}
+
+@media (max-width: 600px) {
+  html {
+    font-size: 75%;
+  }
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-// TODO
+body{
+  font-family: Inter;
+  background: var(--black-800);
+  color:var(--grey-200);
+}
+
+
+body,
+input,
+textarea,
+select,
+button {
+  font: 400 1.1rem 'Inter', sans-serif;
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
